P0 安全修复第四批：S4/S5/S6/S7 安全与限流 4 条
S4 SecurityConfig catch-all permitAll 改 authenticated：
  /api/** permitAll 之前加 4 条 authenticated 规则：
  /api/llm/**、/api/v1/rag/**、/api/classics/translate、/api/game/**，
  防匿名滥用刷 LLM 配额。

S5 删除 WebConfig CORS 重复配置：
  删除 WebConfig.java（唯一职责是重复的 CorsFilter），
  统一到 SecurityConfig.corsConfigurationSource，
  改用 setAllowedOriginPatterns + setAllowCredentials(true)，
  支持 FRONTEND_ORIGIN 多域名逗号分隔。

S6 WebSocket 握手期 JWT 校验：
  新建 JwtHandshakeInterceptor.java，/ws-game 端点握手期从
  query string ?token=xxx 取 JWT 校验（SockJS 不支持自定义 header），
  失败返回 401；WebSocketConfig 注册 interceptor。

S7 RateLimitConfig cacheKey 加 clientIp + 上限：
  cacheKey 改为 clientIp + : + path + : + rate，每个客户端 IP
  独立配额（原 key 仅 path+rate，单用户能耗光全局配额）；
  ConcurrentHashMap 改用 Guava Cache（maximumSize=10000 +
  expireAfterAccess=1h），防长期运行 OOM。

文档：README.md P0 修复表新增 S4/S5/S6/S7 行。

验证：IDE 实时编译 4 个修改文件全部成功（target/classes 中 .class
      文件时间戳在修改之后）；前端配套 tsc + vitest 51/286 通过。